@@ -1,6 +1,6 @@
 # Release name and version
 
 PACKAGE=font-manager
-VERSION=0.4
+VERSION=0.4.1
 
 
