@@ -1,70 +1,0 @@
-<?xml version="1.0"?>
-<interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkWindow" id="splash">
-    <property name="width_request">250</property>
-    <property name="height_request">250</property>
-    <property name="visible">True</property>
-    <property name="resizable">False</property>
-    <property name="window_position">center-always</property>
-    <property name="default_width">250</property>
-    <property name="default_height">250</property>
-    <property name="type_hint">splashscreen</property>
-    <property name="skip_taskbar_hint">True</property>
-    <property name="skip_pager_hint">True</property>
-    <property name="accept_focus">False</property>
-    <property name="deletable">False</property>
-    <child>
-      <object class="GtkVBox" id="vbox1">
-        <property name="visible">True</property>
-        <property name="border_width">10</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkImage" id="app_icon">
-            <property name="visible">True</property>
-            <property name="pixel_size">128</property>
-            <property name="icon_name">preferences-desktop-font</property>
-            <property name="icon-size">0</property>
-          </object>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkHBox" id="hbox1">
-            <property name="visible">True</property>
-            <property name="border_width">10</property>
-            <child>
-              <object class="GtkLabel" id="loading">
-                <property name="visible">True</property>
-                <property name="xalign">1</property>
-                <property name="label" translatable="yes">Loading : </property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="progress">
-                <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="ellipsize">end</property>
-                <property name="max_width_chars">20</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="padding">12</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-  </object>
-</interface>
